// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertHistogramKeysToDate should convert the histogram date key strings to Date types 1`] = `
Array [
  Object {
    "key": 1531699200000,
    "previousValueKey": Array [
      1531612800000,
    ],
    "value": 15,
    "valueKey": Array [
      1531699200000,
    ],
  },
]
`;

exports[`getMetricsChartData should return data formatted for use in a Metrics chart 1`] = `
Array [
  Object {
    "color": "#4B9BFF",
    "data": Array [
      0,
      10,
      20,
      30,
      40,
      50,
      60,
      70,
      80,
      90,
      100,
      110,
      120,
      130,
      140,
      150,
      160,
      170,
      180,
      190,
      200,
      210,
      220,
      230,
      240,
      250,
      260,
      270,
      280,
      290,
    ],
    "id": "data_1",
    "name": "",
    "tooltipTitle": "",
  },
  Object {
    "color": "#7EB7FF",
    "data": Array [
      0,
      20,
      40,
      60,
      80,
      100,
      120,
      140,
      160,
      180,
      200,
      220,
      240,
      260,
      280,
      300,
      320,
      340,
      360,
      380,
      400,
      420,
      440,
      460,
      480,
      500,
      520,
      540,
      560,
      580,
    ],
    "id": "data_previous",
    "name": "Previous Period",
  },
  Object {
    "data": Array [
      1531180800000,
      1531267200000,
      1531353600000,
      1531440000000,
      1531526400000,
      1531612800000,
      1531699200000,
      1531785600000,
      1531872000000,
      1531958400000,
      1532044800000,
      1532131200000,
      1532217600000,
      1532304000000,
      1532390400000,
      1532476800000,
      1532563200000,
      1532649600000,
      1532736000000,
      1532822400000,
      1532908800000,
      1532995200000,
      1533081600000,
      1533168000000,
      1533254400000,
      1533340800000,
      1533427200000,
      1533513600000,
      1533600000000,
      1533686400000,
    ],
    "id": "x",
  },
]
`;

exports[`getSiteMetricsChartData should return data formatted for use in a Site Metrics chart 1`] = `
Array [
  Object {
    "color": "#4B9BFF",
    "data": Array [
      0,
      55,
      110,
      165,
      220,
      275,
      330,
      385,
      440,
      495,
      550,
      605,
      660,
      715,
      770,
      825,
      880,
      935,
      990,
      1045,
      1100,
      1155,
      1210,
      1265,
      1320,
      1375,
      1430,
      1485,
      1540,
      1595,
    ],
    "dataName": "knownVisitorsMetric",
    "id": "data_1",
    "name": "Known Visitors",
    "tooltipTitle": "Known",
    "type": "bar",
  },
  Object {
    "color": "#FFB46E",
    "data": Array [
      0,
      25,
      50,
      75,
      100,
      125,
      150,
      175,
      200,
      225,
      250,
      275,
      300,
      325,
      350,
      375,
      400,
      425,
      450,
      475,
      500,
      525,
      550,
      575,
      600,
      625,
      650,
      675,
      700,
      725,
    ],
    "dataName": "anonymousVisitorsMetric",
    "id": "data_2",
    "name": "Anonymous Visitors",
    "tooltipTitle": "Anonymous",
    "type": "bar",
  },
  Object {
    "color": "#393A4A",
    "data": Array [
      0,
      170,
      340,
      510,
      680,
      850,
      1020,
      1190,
      1360,
      1530,
      1700,
      1870,
      2040,
      2210,
      2380,
      2550,
      2720,
      2890,
      3060,
      3230,
      3400,
      3570,
      3740,
      3910,
      4080,
      4250,
      4420,
      4590,
      4760,
      4930,
    ],
    "id": "data_previous",
    "name": "Previous Period",
    "type": "line",
  },
  Object {
    "data": Array [
      1531180800000,
      1531267200000,
      1531353600000,
      1531440000000,
      1531526400000,
      1531612800000,
      1531699200000,
      1531785600000,
      1531872000000,
      1531958400000,
      1532044800000,
      1532131200000,
      1532217600000,
      1532304000000,
      1532390400000,
      1532476800000,
      1532563200000,
      1532649600000,
      1532736000000,
      1532822400000,
      1532908800000,
      1532995200000,
      1533081600000,
      1533168000000,
      1533254400000,
      1533340800000,
      1533427200000,
      1533513600000,
      1533600000000,
      1533686400000,
    ],
    "id": "x",
  },
]
`;
